--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@
         <div id="root" style="width: 500px;height: 600px;"></div>
         <script src="https://app.dev.wotnot.io/chat-widget/7MkVBzx7pD46100623816959lsymJNpl.js"
             data-session-payload='{&quot;propertyName&quot;:&quot;True Liverpool, Liverpool&quot;,&quot;propertyId&quot;:166764,&quot;cityName&quot;:&quot;Liverpool&quot;,&quot;chatbotTriggerPoint&quot;:&quot;search_page&quot;,&quot;utm_source&quot;:&quot;{\&quot;initial_referrer\&quot;:\&quot;direct\&quot;,\&quot;referring_domain\&quot;:\&quot;https://pr-5568-ecs.staging-amber.com/places/search/liverpool-1811029039831\&quot;,\&quot;initial_referring_domain\&quot;:\&quot;https://pr-5568-ecs.staging-amber.com/places/search/liverpool-1811029039831\&quot;}&quot;}'
-            data-embed-metadata='{"
-            bot_publish_key":"3QgxdBi5Znou062016936329JwX6zovZ","display_header":false,"history_retention":false}'>
+            data-embed-metadata='{"bot_publish_key":"3QgxdBi5Znou062016936329JwX6zovZ","display_header":false,"history_retention":false}'>
             </script>
 
         <div id="container2"></div>
@@ -91,80 +90,11 @@
     <script src="script.js" defer></script>
 
     <script defer>
-        const button = document.getElementById(' iframe-button'); button.addEventListener('click', function () { //
-            window.dataLayer = window.dataLayer || []; // function gtag() { window.dataLayer.push(arguments); } //
-            gtag("event", "Shaan", { // "send_to" : "G-MW9ZRN5QDK" // }); // window.wn.showWidget(true); //
-                launchWhatsAppSignup() window.location.reload();
-            }); window.addEventListener('message', function (event) {
-                if (event.origin !== "https://www.facebook.com") return; try {
-                    const data = JSON.parse(event.data); if
-                        (data.type === 'WA_EMBEDDED_SIGNUP') { // if user finishes the Embedded Signup flow if (data.event==='FINISH'
-            ) {
-                const { phone_number_id, waba_id } = data.data; console.log(phone_number_id,
-                    waba_id, "phone_number_id, waba_id")
-            } // if user cancels the Embedded Signup flow else { const {
-            current_step
-        }=data.data; console.log("USER STOPPED HERE", current_step) } } } catch { // Don’t parse info
-            that’s not a JSON console.log('Non JSON Response', event.data);
-        } // const isValidJson=(text)=> {
-            //     try {
-            //         JSON.parse(text);
-            //         return true;
-            //     } catch (e) {
-            //         return false;
-            //     }
-            // }
-            // if (event?.data && isValidJson(event?.data)) {
-            //     const eventData = JSON.parse(event?.data);
-            //     if (eventData.type === "WN_CUSTOM_GA_EVENT") {
-            //         eval(eventData.data)
-            //     }
-            // }
-        });
-        window.fbAsyncInit = function () {
-            // JavaScript SDK configuration and setup
-            FB.init({
-                appId: 810499287217251, // Facebook App ID
-                cookie: true, // enable cookies
-                xfbml: true, // parse social plugins on this page
-                version: 'v19.0' //Graph API version
-            });
-        };
+        const button = document.getElementById(' iframe-button');
+        button.addEventListener('click', function () {
+            window.location.reload();
+        })
 
-        // Load the JavaScript SDK asynchronously
-        (function (d, s, id) {
-            var js, fjs = d.getElementsByTagName(s)[0];
-            if (d.getElementById(id)) return;
-            js = d.createElement(s); js.id = id;
-            js.src = "https://connect.facebook.net/en_US/sdk.js";
-            fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'facebook-jssdk'));
-
-        // Facebook Login with JavaScript SDK
-        function launchWhatsAppSignup() {
-            // Conversion tracking code
-            // fbq && fbq('trackCustom', 'WhatsAppOnboardingStart', {appId: 354319837116019, feature: 'whatsapp_embedded_signup'});
-
-            // Launch Facebook login
-            FB.login(function (response) {
-                console.log(response);
-                if (response.authResponse) {
-                    const code = response.authResponse.code;
-                    // The returned code must be transmitted to your backend, 
-                    // which will perform a server-to-server call from there to our servers for an access token
-                } else {
-                    console.log(response, "CANCELLED")
-                    console.log('User cancelled login or did not fully authorize.');
-                }
-            }, {
-                config_id: '401338316142778', // configuration ID goes here
-                response_type: 'code',    // must be set to 'code' for System User access token
-                override_default_response_type: true, // when true, any response types passed in the "response_type" will take precedence over the default types
-                extras: {
-                    "sessionInfoVersion": 2,  //  Receive Session Logging Info
-                }
-            });
-        }
     </script>
 </body>
 
