--- a/index.html
+++ b/index.html
@@ -79,9 +79,8 @@
         <!-- <iframe width="640" height="480"
             src="https://embed.dev.wotnot.io/7MkVBzx7pD46100623816959lsymJNpl/bot/4x77VJYgjkik1042084993757vReHiEL?display_header=true&history_retention=false"
             frameborder="0"></iframe> -->
-        <div id="root" style="width: 500px;height: 600px;"></div>
         <script type="text/javascript" id="myscript"
-            src="https://app.dev.wotnot.io/chat-widget/7MkVBzx7pD46100623816959lsymJNpl.js"
+            src="https://app.wotnot.io/chat-widget/YeCqhzqXj9nE0941236489412jz1aTZC.js"
             data-session-payload='{&quot;propertyName&quot;:&quot;True Liverpool, Liverpool&quot;,&quot;propertyId&quot;:166764,&quot;cityName&quot;:&quot;Liverpool&quot;,&quot;chatbotTriggerPoint&quot;:&quot;search_page&quot;,&quot;utm_source&quot;:&quot;{\&quot;initial_referrer\&quot;:\&quot;direct\&quot;,\&quot;referring_domain\&quot;:\&quot;https://pr-5568-ecs.staging-amber.com/places/search/liverpool-1811029039831\&quot;,\&quot;initial_referring_domain\&quot;:\&quot;https://pr-5568-ecs.staging-amber.com/places/search/liverpool-1811029039831\&quot;}&quot;}'
             data-embed-metadata='{"bot_publish_key":"3QgxdBi5Znou062016936329JwX6zovZ","display_header":false,"history_retention":false}'>
             </script>
@@ -109,7 +108,7 @@
             // Iterate over each script element
             scripts.forEach(function (script) {
                 // Check if the script element has a src attribute and its value contains 'https://cdn.wotnot.io'
-                if (script.href && script.href.includes('https://cdn.dev.wotnot.io')) {
+                if (script.href && script.href.includes('https://cdn.wotnot.io')) {
                     // Remove the script element
                     script.remove();
                 }
@@ -119,7 +118,7 @@
             // Iterate over each script element
             scripts1.forEach(function (script) {
                 // Check if the script element has a src attribute and its value contains 'https://cdn.wotnot.io'
-                if (script.src && script.src.includes('https://cdn.dev.wotnot.io')) {
+                if (script.src && script.src.includes('https://cdn.wotnot.io')) {
                     // Remove the script element
                     script.remove();
                 }
@@ -130,7 +129,7 @@
 
 
             var script = document.createElement('script');
-            script.src = 'https://app.dev.wotnot.io/chat-widget/7MkVBzx7pD46100623816959lsymJNpl.js';
+            script.src = 'https://app.wotnot.io/chat-widget/YeCqhzqXj9nE0941236489412jz1aTZC.js';
             script.id = "myscript";
             script.setAttribute("data-embed-metadata", '{"bot_publish_key":"3QgxdBi5Znou062016936329JwX6zovZ","display_header":false,"history_retention":false}');
             script.setAttribute("data-session-payload", '{&quot;propertyName&quot;:&quot;True Liverpool, Liverpool&quot;,&quot;propertyId&quot;:166764,&quot;cityName&quot;:&quot;Liverpool&quot;,&quot;chatbotTriggerPoint&quot;:&quot;search_page&quot;,&quot;utm_source&quot;:&quot;{\&quot;initial_referrer\&quot;:\&quot;direct\&quot;,\&quot;referring_domain\&quot;:\&quot;https://pr-5568-ecs.staging-amber.com/places/search/liverpool-1811029039831\&quot;,\&quot;initial_referring_domain\&quot;:\&quot;https://pr-5568-ecs.staging-amber.com/places/search/liverpool-1811029039831\&quot;}&quot;}');
