--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 const eventData = JSON.parse(event?.data);
                 if (eventData.type === "chat-bubble-loaded") {
                     console.log("HELLO")
-                    // window.wn.showWidget();
+                    window.wn.showWidget();
                 }
             }
         });
