--- a/index.html
+++ b/index.html
@@ -2,109 +2,21 @@
 <html lang="en">
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=0.41, maximum-scale=1" />
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment3</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/221c2c9d5f.js" crossorigin="anonymous"></script>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-L79QGQVFDR"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-        gtag('config', 'G-L79QGQVFDR', { 'debug_mode': true });
-    </script>
 </head>
 
 <body>
-    <div id="main">
-        <header>
-            <!-- <div class="flex"> -->
-            <div id="first">
-                <p id="date"></p>
-                <div id="dateobj">
-                    <p id="day"></p>
-                    <p id="my"></p>
-                </div>
-            </div>
-            <!-- <div id="dateobj">
-                    <p id="day"></p>
-                    <p id="my"></p>
-                </div> -->
-            <!-- </div> -->
-            <div class="container">
-                <div id="places">
-                    <p class="text">Select Place</p>
-                    <button onclick="myfunc()" class="dropbtn">All Places &nbsp; &nbsp; <i
-                            class="fas fa-caret-down"></i></button>
-                </div>
-                <div id="timeline">
-                    <p class="text">How Many Days?</p>
-                    <button onclick="myfunc1()" class="dropbtn"> One Week &nbsp; &nbsp; <i
-                            class="fas fa-caret-down"></i></button>
-                    <div id="mydropdown" class="dropdowncontent1">
-                        <a href="#">One Week</a>
-                        <a href="#">Two Week</a>
-                        <a href="#">Three Week</a>
-                        <a href="#">Four Week</a>
-                        <a href="#">Five Week</a>
-                        <a href="#">Six Week</a>
-                    </div>
-                </div>
-                <div id="selectdate">
-                    <p class="text">Select Date</p>
-                    <input type="date" id="inp" name="select">
-                </div>
-                <div id="icon">
-                    <i class="fas fa-sliders-h"></i>
-                </div>
-                <div id="gobtn">
-                    <button id="in"><i class="fas fa-search"></i> Go</button>
-                </div>
-            </div>
-            <div id="weather">
-                <p id="status"><i class='fas fa-sun fa-2x' style='color: #eccc68'></i></p>
-                <p id="temp">23&#176;</p>
-                <div id="inside">
-                    <p id="city">Aurangabad</p>
-                    <p id="nation">IN</p>
-                </div>
-            </div>
-        </header>
 
-        <button id="iframe-button">EXPLORE</button>
-        <!-- <iframe width="640" height="480"
-            src="https://embed.dev.wotnot.io/7MkVBzx7pD46100623816959lsymJNpl/bot/4x77VJYgjkik1042084993757vReHiEL?display_header=true&history_retention=false"
-            frameborder="0"></iframe> -->
-        <script src='https://app.dev.wotnot.io/chat-widget/7MkVBzx7pD46100623816959lsymJNpl.js' hideBotOnLoad="true"
-            defer></script>
-
-        <div id="container2"></div>
+    <div class="container">
+        <div>Trying out the sample of transparent bots</div>
+        <div id="root"></div>
     </div>
-    <script src="script.js" defer></script>
 
-    <script defer>
-        const isValidJson = (text) => {
-            try {
-                JSON.parse(text);
-                return true;
-            } catch (e) {
-                return false;
-            }
-        }
-        window.addEventListener('message', function (event) {
-            if (event?.data && isValidJson(event?.data)) {
-                const eventData = JSON.parse(event?.data);
-                if (eventData.type === "chat-bubble-loaded") {
-                    console.log("HELLO")
-                    window.wn.showWidget();
-                }
-            }
-        });
-    </script>
+    <script src='https://app.dev.wotnot.io/chat-widget/7MkVBzx7pD46100623816959lsymJNpl.js' widget-container-id="root"
+        widget-height="500px" widget-width="600px" widget-header-visible="false" defer></script>
 </body>
 
 </html>
