--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
         <div id="root"></div>
     </div>
 
-    <script src='https://app.dev.wotnot.io/chat-widget/7MkVBzx7pD46100623816959lsymJNpl.js' widget-container-id="root"
-        widget-height="500px" widget-width="600px" widget-header-visible="false" defer></script>
+
+
+    <script src="https://app.wotnot.io/chat-widget/7vKkhRXPreMT072624217092nmHwpF9u.js" widget-container-id="root"
+        widget-height="500px" widget-width="600px" defer></script>
 </body>
 
 </html>
