Add send mms block for outbound bots

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 
 
 
-    <script src="https://app.wotnot.io/chat-widget/7vKkhRXPreMT072624217092nmHwpF9u.js" widget-container-id="root"
-        widget-height="500px" widget-width="600px" defer></script>
+    <script src="https://app.dev.wotnot.io/chat-widget/7MkVBzx7pD46100623816959lsymJNpl.js" defer></script>
 </body>
 
 </html>
