TS-400 | Supprt export ticket functionality in ticket list

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
 
-    <script src="https://app.dev.wotnot.io/chat-widget/7MkVBzx7pD46100623816959lsymJNpl.js" defer></script>
+    <script src='https://app.dev.wotnot.io/chat-widget/mqjyiDMpjuXG060121718720N9ghENzP.js' defer></script>
 </body>
 
 </html>
