--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 
 
 
-    <script src='https://app.dev.wotnot.io/chat-widget/7MkVBzx7pD46100623816959lsymJNpl.js' defer></script>
+    <script src='https://app.dev.wotnot.io/chat-widget/7MkVBzx7pD46100623816959lsymJNpl.js' widget-container-id="root"
+        widget-height="500px" widget-width="600px" defer></script>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-MW9ZRN5QDK"></script>
     <script>
