--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
 
     <div class="container">
         <div>Trying out the sample of transparent bots</div>
-        <div id="root"></div>
+        <div id="root"
+            style="height: 500px; width: 600px; box-shadow: 0 3px 6px 0 rgba(0,0,0,0.16); background-color: #ffffff; display: block;">
+        </div>
     </div>
 
 
 
     <script src='https://app.dev.wotnot.io/chat-widget/7MkVBzx7pD46100623816959lsymJNpl.js' widget-container-id="root"
-        widget-height="500px" widget-width="600px" defer></script>
+        defer></script>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-MW9ZRN5QDK"></script>
     <script>
