--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <button id="stopBtn" onclick="playAudio()">Play audio</button>
     <br><br><br><br><br><br><br>
     <textarea id="output" rows="10" cols="80"></textarea>
-    <iframe width="640" height="480"
+    <!-- <iframe width="640" height="480"
         src="https://embed.dev.wotnot.io/4g96HFUC7zkc0910496115822eP9lfZj/bot/54G67cNMa2Fr055411813848b4oK86iT?display_header=false&history_retention=false"
-        frameborder="0"></iframe>
+        frameborder="0"></iframe> -->
     <script>
         let recorder;
         let socket;
