--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <!-- <iframe width="640" height="480"
         src="https://embed.dev.wotnot.io/4g96HFUC7zkc0910496115822eP9lfZj/bot/54G67cNMa2Fr055411813848b4oK86iT?display_header=false&history_retention=false"
         frameborder="0"></iframe> -->
-    <iframe width="640" height="480"
+    <!-- <iframe width="640" height="480"
         src="https://embed.wotnot.io/75rMYqEnPJqs103517440470bPzvgOz6/bot/3dVGsSUeRKJC095227080647p2hXPGcC?display_header=false&history_retention=false"
-        frameborder="0"></iframe>
+        frameborder="0"></iframe> -->
     <script>
         let recorder;
         let socket;
