--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
 
     </script>
-    <!-- <script src="https://app.dev.wotnot.io/chat-widget/7MkVBzx7pD46100623816959lsymJNpl.js" defer></script> -->
+    <script src="https://app.dev.wotnot.io/chat-widget/7MkVBzx7pD46100623816959lsymJNpl.js" defer></script>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-MW9ZRN5QDK"></script>
 </body>
