--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 </head>
 
 <body>
-    <iframe width="640" height="480"
+    <!-- <iframe width="640" height="480"
         src="https://embed.test.wotnot.io/5E8kkAZZAjip072701122951LXIW8HYC/bot/7vDUnGJWX2qr1230069665061QuQrgfM?display_header=false&history_retention=false"
-        frameborder="0"></iframe>
+        frameborder="0"></iframe> -->
     <!-- <iframe width="640" height="480"
         src="https://embed.dev.wotnot.io/4g96HFUC7zkc0910496115822eP9lfZj/bot/54G67cNMa2Fr055411813848b4oK86iT?display_header=false&history_retention=false"
         frameborder="0"></iframe> -->
@@ -203,7 +203,7 @@
 
 
     </script>
-    <!-- <script src="https://app.dev.wotnot.io/chat-widget/7MkVBzx7pD46100623816959lsymJNpl.js" defer></script> -->
+    <script src="https://app.dev.wotnot.io/chat-widget/7MkVBzx7pD46100623816959lsymJNpl.js" defer></script>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-MW9ZRN5QDK"></script>
 </body>
