--- a/index.html
+++ b/index.html
@@ -14,13 +14,9 @@
 <body>
     <h1>Development Bot</h1>
     <iframe width="640" height="480"
-        src="https://embed.dev.wotnot.io/7MkVBzx7pD46100623816959lsymJNpl/bot/7MLDQDqtDKWz112608574869DyPYHrIZ?display_header=false&history_retention=false"
+        src="http://localhost:5040/7MkVBzx7pD46100623816959lsymJNpl/bot/7MLDQDqtDKWz112608574869DyPYHrIZ?display_header=false&history_retention=false"
         frameborder="0"></iframe>
 
-    <h1>Staging Bot</h1>
-    <iframe width="640" height="480"
-        src="https://embed.test.wotnot.io/6vKk97AUzNB3081204854262qZFOGAN6/bot/857fYAd4XPcV112317594773b6M0DEWk?display_header=false&history_retention=false"
-        frameborder="0"></iframe>
     <script>
         let recorder;
         let socket;
