--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <h1>Development Bot</h1>
     <iframe width="640" height="480"
-        src="http://localhost:5040/7MkVBzx7pD46100623816959lsymJNpl/bot/7MLDQDqtDKWz112608574869DyPYHrIZ?display_header=false&history_retention=false"
+        src="https://embed.test.wotnot.io/7MkVBzx7pD46100623816959lsymJNpl/bot/7MLDQDqtDKWz112608574869DyPYHrIZ?display_header=false&history_retention=false"
         frameborder="0"></iframe>
 
     <script>
