--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
 <body>
     <h1>Development Bot</h1>
-    <iframe width="640" height="480"
-        src="https://embed.dev.wotnot.io/7MkVBzx7pD46100623816959lsymJNpl/bot/7MLDQDqtDKWz112608574869DyPYHrIZ?display_header=false&history_retention=false"
-        frameborder="0"></iframe>
+    <!-- <iframe width="640" height="480"
+        src="http://localhost:5040/7MkVBzx7pD46100623816959lsymJNpl/bot/7MLDQDqtDKWz112608574869DyPYHrIZ?display_header=false&history_retention=false"
+        frameborder="0"></iframe> -->
 
     <script>
         let recorder;
@@ -199,7 +199,7 @@
 
 
     </script>
-    <!-- <script src="https://bot.firmli.com/chat-widget/7NMyWegwGABd060419500067IqrFeDcN.js" defer></script> -->
+    <script src="https://bot.firmli.com/chat-widget/7NMyWegwGABd060419500067IqrFeDcN.js" defer></script>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-MW9ZRN5QDK"></script>
 </body>
