--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         src="https://embed.dev.wotnot.io/7MkVBzx7pD46100623816959lsymJNpl/bot/7MLDQDqtDKWz112608574869DyPYHrIZ?display_header=false&history_retention=false"
         frameborder="0"></iframe> -->
 
-    <script src="https://app.dev.wotnot.io/chat-widget/7MkVBzx7pD46100623816959lsymJNpl.js" defer></script>
+    <script src="https://app.dev.wotnot.io/chat-widget/7MkVBzx7pD46100623816959lsymJNpl.js"
+        data-embed-metadata='{"bot_publish_key": "5mP58Nm4Romm063242610352uzHsIBNX", "display_header": "true"}' defer>
+        </script>
 </body>
 
 </html>
