Fix document rendering for dynamic data document message

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         src="https://embed.dev.wotnot.io/7MkVBzx7pD46100623816959lsymJNpl/bot/7MLDQDqtDKWz112608574869DyPYHrIZ?display_header=false&history_retention=false"
         frameborder="0"></iframe> -->
 
-    <script src="https://app.dev.wotnot.io/chat-widget/7MkVBzx7pD46100623816959lsymJNpl.js" defer>
+    <script src="http://localhost:5050/chat-widget/7MkVBzx7pD46100623816959lsymJNpl.js" defer>
     </script>
 </body>
 
