--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <h1>Development Bot</h1>
+    <h1>Testing Bot</h1>
     <!-- <iframe width="640" height="480"
         src="http://localhost:5040/7MkVBzx7pD46100623816959lsymJNpl/bot/7MLDQDqtDKWz112608574869DyPYHrIZ?display_header=true&history_retention=false"
         frameborder="0"></iframe> -->
